<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/activity_selects"
              android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/lbl_change_pic"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/take_pic"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/btn_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/choose_pic"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
    <TextView
            android:id="@+id/btn_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:gravity="end"
            android:textColor="@color/color_red" />

</LinearLayout>

