<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

<!--
    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="left"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:background="@color/colorPrimary">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
-->


    <ScrollView
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">
                <TextView android:id="@+id/tvTitleText"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="@dimen/margin_8"
                          android:layout_marginBottom="@dimen/margin_8"
                          android:text="IDENTIFICATION DETAILS"
                          android:layout_marginRight="@dimen/margin_8"
                          android:gravity="center"/>
                <ImageView
                        android:id="@+id/iv_profileplace"
                        android:layout_width="@dimen/margin_16"
                        android:layout_height="@dimen/margin_16"
                        android:layout_gravity="center"
                        android:tint="@color/color_red"
                        android:background="@drawable/info_button" />

            </LinearLayout>

            <com.kofigyan.stateprogressbar.StateProgressBar
                    android:id="@+id/stateprogressbar"
                    android:layout_below="@id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:layout_height="wrap_content"
                    app:spb_animateToCurrentProgressState="true"
                    app:spb_checkStateCompleted="true"
                    app:spb_currentStateDescriptionColor="@color/usage_state_foreground_color"
                    app:spb_descriptionTopSpaceIncrementer="3dp"
                    app:spb_maxStateNumber="five"
                    app:spb_stateBackgroundColor="@color/state_background_color"
                    app:spb_stateForegroundColor="@color/usage_state_foreground_color"
                    app:spb_stateNumberForegroundColor="@color/state_foreground_text_color"/>

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilepic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:civ_border_color="@color/colorPrimaryDark"
                    app:civ_border_width="1dp"
                    android:padding="10dp"
                    android:src="@drawable/info_button"/>

            <TextView
                    android:id="@+id/pic_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/colorAccent"
                    android:elevation="10dp"
                    android:text="Choose Picture" />


            <LinearLayout
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Spinner
                        android:id="@+id/spinner_doc_type"
                        android:layout_width="match_parent"
                        android:padding="10dp"
                        android:layout_height="wrap_content"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        android:spinnerMode="dropdown" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/state_background_color" />
                 <Spinner
                        android:id="@+id/spinner_initial"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        android:spinnerMode="dropdown" />

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/state_background_color" />

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:textColorHint="@color/state_background_color"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                    <EditText
                            android:id="@+id/fname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="30"
                            android:inputType="text"
                            android:textColorHint="@color/state_background_color"
                            android:textColor="@color/colorPrimary"
                            android:hint="@string/hint_name"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_mname"
                        android:layout_width="match_parent"
                        android:textColorHint="@color/state_background_color"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                    <EditText
                            android:id="@+id/mname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="30"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/state_background_color"
                            android:textColor="@color/colorPrimary"
                            android:hint="@string/hint_mname"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_lname"
                        android:layout_width="match_parent"
                        android:textColorHint="@color/state_background_color"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                    <EditText
                            android:id="@+id/lname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="30"
                            android:inputType="number"
                            android:textColorHint="@color/state_background_color"
                            android:textColor="@color/colorPrimary"
                            android:hint="@string/hint_lname"/>
                </android.support.design.widget.TextInputLayout>


                    <TextView
                            android:id="@+id/dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="30"
                            android:inputType="number"
                            android:padding="10dp"
                            android:textColorHint="@color/state_background_color"
                            android:textColor="@color/colorPrimary"
                            android:hint="@string/hint_dob"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/state_background_color" />


                <TextView
                        android:id="@+id/gender"
                        style="@style/label_small"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_marginLeft="@dimen/margin_8"
                        android:text="@string/label_gender" />

                <RadioGroup
                        android:id="@+id/radioGroup_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_16"
                        android:orientation="horizontal" >

                    <RadioButton
                            android:id="@+id/rb_male"
                            android:layout_width="wrap_content"
                            android:textColor="@color/state_background_color"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_male"/>
                    <RadioButton
                            android:id="@+id/rb_fmale"
                            android:layout_width="wrap_content"
                            android:textColor="@color/state_background_color"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_fmale"/>
                    <RadioButton
                            android:id="@+id/rb_other"
                            android:layout_width="wrap_content"
                            android:textColor="@color/state_background_color"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_other"/>
                </RadioGroup>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_marginBottom="@dimen/margin_16"
                        android:orientation="horizontal">

                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btn_nxt"
                            android:text="@string/next"
                            android:gravity="center"
                            android:background="@color/state_background_color"
                            android:textColor="@color/colorWhite"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>